new threshold method

--- a/Advanced-Lane-Finding/Project.ipynb
+++ b/Advanced-Lane-Finding/Project.ipynb
@@ -126,6 +126,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def abs_sobel_thresh(gray, orient='x', thresh_min=0, thresh_max=255):\n",
+    "    if orient == 'x':\n",
+    "        sobel = cv2.Sobel(gray, cv2.CV_64F, 1, 0)\n",
+    "    else:\n",
+    "        sobel = cv2.Sobel(gray, cv2.CV_64F, 0, 1)\n",
+    "    abs_sobel = np.absolute(sobel)\n",
+    "    max_value = np.max(abs_sobel)\n",
+    "    binary_output = np.uint8(255*abs_sobel/max_value)\n",
+    "    threshold_mask = np.zeros_like(binary_output)\n",
+    "    threshold_mask[(binary_output >= thresh_min) & (binary_output <= thresh_max)] = 1\n",
+    "    return threshold_mask\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dir_threshold(gray, sobel_kernel=3, thresh=(0, np.pi/2)):\n",
+    "    # Take the gradient in x and y separately\n",
+    "    sobel_x = cv2.Sobel(gray, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "    sobel_y = cv2.Sobel(gray, cv2.CV_64F, 0, 1, ksize=sobel_kernel)\n",
+    "    # 3) Take the absolute value of the x and y gradients\n",
+    "    abs_sobel_x = np.absolute(sobel_x)\n",
+    "    abs_sobel_y = np.absolute(sobel_y)\n",
+    "    # 4) Use np.arctan2(abs_sobely, abs_sobelx) to calculate the direction of the gradient\n",
+    "    direction = np.arctan2(abs_sobel_y,abs_sobel_x)\n",
+    "    direction = np.absolute(direction)\n",
+    "    # 5) Create a binary mask where direction thresholds are met\n",
+    "    mask = np.zeros_like(direction)\n",
+    "    mask[(direction >= thresh[0]) & (direction <= thresh[1])] = 1\n",
+    "    # 6) Return this mask as your binary_output image\n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
    "outputs": [],
@@ -951,13 +993,7 @@
       " 12%|█▏        | 149/1251 [00:27<03:20,  5.50it/s]\u001b[A\n",
       " 12%|█▏        | 150/1251 [00:27<03:19,  5.51it/s]\u001b[A\n",
       " 12%|█▏        | 151/1251 [00:27<03:19,  5.51it/s]\u001b[A\n",
-      " 12%|█▏        | 152/1251 [00:27<03:19,  5.51it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 12%|█▏        | 152/1251 [00:27<03:19,  5.51it/s]\u001b[A\n",
       " 12%|█▏        | 153/1251 [00:27<03:18,  5.52it/s]\u001b[A\n",
       " 12%|█▏        | 154/1251 [00:27<03:18,  5.53it/s]\u001b[A\n",
       " 12%|█▏        | 155/1251 [00:28<03:18,  5.52it/s]\u001b[A\n",
@@ -1265,13 +1301,7 @@
       " 36%|███▌      | 451/1251 [01:18<02:19,  5.73it/s]\u001b[A\n",
       " 36%|███▌      | 452/1251 [01:18<02:19,  5.74it/s]\u001b[A\n",
       " 36%|███▌      | 453/1251 [01:18<02:19,  5.74it/s]\u001b[A\n",
-      " 36%|███▋      | 454/1251 [01:19<02:18,  5.74it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 36%|███▋      | 454/1251 [01:19<02:18,  5.74it/s]\u001b[A\n",
       " 36%|███▋      | 455/1251 [01:19<02:18,  5.74it/s]\u001b[A\n",
       " 36%|███▋      | 456/1251 [01:19<02:18,  5.74it/s]\u001b[A\n",
       " 37%|███▋      | 457/1251 [01:19<02:18,  5.74it/s]\u001b[A\n",
@@ -1579,13 +1609,7 @@
       " 60%|██████    | 753/1251 [02:14<01:29,  5.58it/s]\u001b[A\n",
       " 60%|██████    | 754/1251 [02:15<01:29,  5.58it/s]\u001b[A\n",
       " 60%|██████    | 755/1251 [02:15<01:28,  5.58it/s]\u001b[A\n",
-      " 60%|██████    | 756/1251 [02:15<01:28,  5.58it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 60%|██████    | 756/1251 [02:15<01:28,  5.58it/s]\u001b[A\n",
       " 61%|██████    | 757/1251 [02:15<01:28,  5.58it/s]\u001b[A\n",
       " 61%|██████    | 758/1251 [02:15<01:28,  5.58it/s]\u001b[A\n",
       " 61%|██████    | 759/1251 [02:15<01:28,  5.58it/s]\u001b[A\n",
@@ -1892,13 +1916,7 @@
       " 84%|████████▍ | 1054/1251 [03:07<00:34,  5.63it/s]\u001b[A\n",
       " 84%|████████▍ | 1055/1251 [03:07<00:34,  5.63it/s]\u001b[A\n",
       " 84%|████████▍ | 1056/1251 [03:07<00:34,  5.63it/s]\u001b[A\n",
-      " 84%|████████▍ | 1057/1251 [03:07<00:34,  5.63it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 84%|████████▍ | 1057/1251 [03:07<00:34,  5.63it/s]\u001b[A\n",
       " 85%|████████▍ | 1058/1251 [03:08<00:34,  5.63it/s]\u001b[A\n",
       " 85%|████████▍ | 1059/1251 [03:08<00:34,  5.63it/s]\u001b[A\n",
       " 85%|████████▍ | 1060/1251 [03:08<00:33,  5.63it/s]\u001b[A\n",
@@ -2124,29 +2142,6 @@
     "\n",
     "white_clip = clip1.fl_image(process_image) #NOTE: this function expects color images!!\n",
     "%time white_clip.write_videofile(white_output, audio=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video width=\"960\" height=\"540\" controls> <source src=\"project_video_post_processing.mp4\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "HTML(\"\"\"<video width=\"960\" height=\"540\" controls> <source src=\"{0}\"></video>\"\"\".format(white_output))"
    ]
   },
   {
